--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </main>
 
 <div style="text-align: center;">
-  <img src="digbez.jpg" alt="Popis obrázku" style="width: 400px;">
+  <img src="obrazky/digbez.jpg" alt="Popis obrázku" style="width: 400px;">
 </div>
 
 </body>
