--- a/firewall.html
+++ b/firewall.html
@@ -39,7 +39,7 @@
   <li>Zaznamenáva pokusy o prienik</li>
 </ul>
 
-<img src="obfirewall.png" width="100"></br>
+<img src="obrazky/obfirewall.png" width="100"></br>
 
 <p><small>Obrázok: Wikipedia – Firewall Network Diagram</small></p>
 
