--- a/elektronickýpodpis.html
+++ b/elektronickýpodpis.html
@@ -39,7 +39,7 @@
   <li><strong>Kvalifikovaný</strong> – má právnu váhu klasického podpisu</li>
 </ul>
 
-<img src="elekpod.jpg" width="100"></br>
+<img src="obrazky/elekpod.jpg" width="100"></br>
 
 <h3>Príklady použitia</h3>
 <ul>
