--- a/elektronickýpodpis.html
+++ b/elektronickýpodpis.html
@@ -32,20 +32,44 @@
   V Európskej únii je používanie elektronického podpisu upravené <strong>nariadením eIDAS</strong>, ktoré zaručuje právnu rovnosť elektronického a klasického podpisu.
 </p>
 
-<h3>Typy elektronických podpisov</h3>
-<ul>
-  <li><strong>Jednoduchý</strong> – základná verzia bez silnej autentifikácie</li>
-  <li><strong>Zaručený</strong> – spojený s identitou osoby</li>
-  <li><strong>Kvalifikovaný</strong> – má právnu váhu klasického podpisu</li>
-</ul>
+<h2>Typy elektronických podpisov</h2>
 
+<table>
+  <caption>Prehľad typov elektronických podpisov</caption>
+  <tr>
+    <th>Typ</th>
+    <th>Popis</th>
+    <th>Využitie</th>
+  </tr>
+  <tr>
+    <td>Jednoduchý</td>
+    <td>Základný podpis bez silného overenia</td>
+    <td>Interné dokumenty, e-mailová komunikácia</td>
+  </tr>
+  <tr>
+    <td>Zaručený</td>
+    <td>Spája dokument s konkrétnou osobou</td>
+    <td>Faktúry, zmluvy, obchodná komunikácia</td>
+  </tr>
+  <tr>
+    <td>Kvalifikovaný</td>
+    <td>Najvyššia úroveň, právne záväzný ako ručný podpis</td>
+    <td>Úradné dokumenty, právne zmluvy</td>
+  </tr>
+</table>
 <img src="obrazky/elekpod.jpg" width="100"></br>
 
-<h3>Príklady použitia</h3>
+<h2>Technické fungovanie</h2>
+<p>
+  Elektronický podpis využíva kryptografiu s verejným kľúčom. Vytvorí sa hash dokumentu (digitálny odtlačok), ktorý sa zašifruje súkromným kľúčom podpisujúceho. Prijímateľ potom pomocou verejného kľúča overí, či podpis aj dokument zodpovedajú originálu.
+</p>
+
+  <h2>Výhody</h2>
 <ul>
-  <li>Podpisovanie PDF dokumentov (napr. daňové priznania)</li>
-  <li>Elektronické faktúry a zmluvy</li>
-  <li>Prístup do verejných portálov (napr. Slovensko.sk)</li>
+  <li>Šetrí čas aj náklady</li>
+  <li>Vhodný pre prácu na diaľku</li>
+  <li>Právne uznávaný v EÚ</li>
+  <li>Dokladá integritu a nemennosť dokumentu</li>
 </ul>
 
 <h3>Zdroje</h3>
