--- a/elektronickýpodpis.html
+++ b/elektronickýpodpis.html
@@ -24,7 +24,7 @@
       margin-top: 30px;
     }
     th, td {
-      border: 1px solid #444;
+      border: 1px solid #fff;
       padding: 12px;
       text-align: left;
     }
