--- a/firewall.html
+++ b/firewall.html
@@ -18,9 +18,38 @@
       max-width: 600px;
       margin-top: 20px;
     }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 30px;
+    }
+    th, td {
+      border: 1px solid #fff;
+      padding: 12px;
+      text-align: left;
+    }
+    th {
+      background-color: #222;
+    }
+    caption {
+      caption-side: top;
+      margin-bottom: 10px;
+      font-weight: bold;
+      font-size: 18px;
+    }
+    .button {
+      display: inline-block;
+      padding: 10px 20px;
+      margin-top: 40px;
+      background-color: #00bfff;
+      color: #000;
+      text-decoration: none;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
+
 
 <h1>Firewall</h1>
 
